# r2inspect

./: .bandit  .coverage.SkynetOS.local.54801.XfshXBQx  .coverage.SkynetOS.local.54884.XAHyeORx  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .shellcheckrc  ABSTRACTION_TESTS_SUMMARY.md  ADAPTER_TESTS_SUMMARY.md  ARCHITECTURE.md  CLAUDE.md  CORE_TESTS_SUMMARY.md  COVERAGE_TESTS_SUMMARY.md  DETECTION_ANALYZER_TESTS_SUMMARY.md  DOCKER.md  Dockerfile  GROUP4_QUICK_REFERENCE.md  GROUP4_TEST_SUMMARY.md  HASH_ANALYZER_TESTS_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  NEW_TESTS_SUMMARY.md  QUICK_TEST_REFERENCE.md  README.md  README.pypi.md  SCHEMA_TESTS_SUMMARY.md  SIMILARITY_TESTS_SUMMARY.md  TEST.md  TEST_FILES_MANIFEST.md  TEST_FILES_SUMMARY.md  ZERO_COVERAGE_TESTS_SUMMARY.md  docker-compose.yml  docker-run.bat  docker-run.sh  install.sh  mypy.ini  new_coverage.xml  pyproject.toml  (+10 more)
.coverage-gate/: .coverage.manual1  .coverage.manual2.Marcs-MacBook-Pro.local.59406.XRRCihyx  .coverage.manual2a  .coverage.manual2b.Marcs-MacBook-Pro.local.56542.XPGyZhTx  .coverage.manual2b1.Marcs-MacBook-Pro.local.55969.XHzgMAAx  .coverage.shard1  cli_retry_cluster_coverage.json  cluster11_cli_z5_coverage.json  cluster_export_registry_impfuzzy.json  cluster_export_registry_impfuzzy_integration_scope.json  cluster_next_wave_check.json  coverage-integration-global-check.json  coverage-integration-global-check.xml  coverage-integration.term.txt  current_block5_modules_cov.json  current_block5_targeted_cov.json  final16_bridge_cov.json  integration.manual1.junit.xml  integration.manual2a.junit.xml  integration.shard1.junit.xml  integration_1.junit.xml  integration_20260301_232952_1.junit.xml  integration_20260302_000204_1.junit.xml  integration_full.json.xml  low_coverage_modules_100.json  next10_cluster_raw_check.json  next10_target_check_fresh.json  next5_global_bridge_check.json  phase5_targeted_now.json  phase_d_unit_20260302_001251_1.junit.xml  projected_remaining_after_top15.json  remaining_after_wave1.json  shard1.list  shard2.list  shard2a.list  shard2b.list  shard2b1.list  shard2b2.list  top10_cluster2_check.json  top10_cluster2_selected_files.json  (+39 more)
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md
.qlty/: qlty.toml
benchmarks/: benchmark_startup.py  bottleneck_analysis.py  comprehensive_profile.py  end_to_end_analysis.py  parallel_pipeline_benchmark.py  performance_analysis.py
config/: README.md
docs/: PRE_COMMIT_SETUP.md  architecture.md  architecture_rules.md  integration_testing_cleanup_candidates.md  integration_testing_deletion_candidates.md  testing_cleanup_candidates.md  testing_migration_status.md  testing_seams.md
examples/: adapter_usage_example.py  error_handling_examples.py  example_base_analyzer.py  schema_usage_example.py
output/: README.md
r2inspect/: CLAUDE.md  __init__.py  __main__.py  __version__.py  cli.py  cli_main.py  config.py  config_store.py  core.py  factory.py  lazy_loader.py  lazy_loader_models.py  lazy_loader_stats.py  pipeline_composition.py
r2inspect/abstractions/: CLAUDE.md  __init__.py  analysis_result.py  base_analyzer.py  base_analyzer_support.py  coercion_support.py  command_helper_mixin.py  hashing_strategy.py  hashing_strategy_support.py  result_builder.py  validation_support.py
r2inspect/adapters/: CLAUDE.md  __init__.py  analyzer_runner.py  file_system.py  magic_adapter.py  magic_provider.py  r2_commands.py  r2pipe_adapter.py  r2pipe_context.py  r2pipe_queries.py  r2pipe_query_bytes.py  r2pipe_query_cached.py  r2pipe_query_text.py  validation.py  validation_primitives.py
r2inspect/application/: CLAUDE.md  analysis_service.py  analyzer_runner.py  batch_discovery.py  batch_execution.py  batch_models.py  batch_service.py  batch_signatures.py  batch_stats.py  options.py  result_mapper.py  result_mapper_builders.py  runtime_support.py
r2inspect/cli/: CLAUDE.md  __init__.py  analysis_runner.py  analysis_runner_support.py  batch_discovery.py  batch_discovery_runtime.py  batch_lifecycle.py  batch_output.py  batch_output_csv.py  batch_output_json.py  batch_output_runtime.py  batch_output_summary.py  batch_output_support.py  batch_paths.py  batch_presentation.py  batch_processing.py  batch_processing_runtime.py  batch_processing_support.py  batch_reporting.py  batch_runtime.py  batch_service_runtime.py  batch_streaming.py  batch_summary.py  batch_summary_runtime.py  batch_summary_tables.py  batch_summary_views.py  batch_workers.py  cli_entry.py  command_runtime.py  display.py  display_base.py  display_dispatch.py  display_runtime.py  display_sections.py  display_sections_bindiff_support.py  display_sections_common.py  display_sections_file.py  display_sections_hashing.py  display_sections_hashing_fuzzy_views.py  display_sections_hashing_renderers.py  (+23 more)
r2inspect/compat/: __init__.py  command_helpers.py  r2_helpers.py
r2inspect/config_schemas/: __init__.py  builder.py  schemas.py
r2inspect/core/: CLAUDE.md  __init__.py  analyzer_factory.py  constants.py  file_validator.py  file_validator_support.py  inspector.py  inspector_dispatch.py  inspector_helpers.py  inspector_runtime.py  pipeline_builder.py  pipeline_builder_runtime.py  pipeline_stage_specs.py  r2_session.py  result_aggregator.py  result_aggregator_indicator_support.py  result_aggregator_recommendation_support.py  (+2 more)
samples/: README.md
scripts/: ci_run_integration_batch.py  ci_run_integration_coverage_gate.py  ci_run_integration_coverage_gate_sharded.py  coverage_display_two_pass.sh  coverage_gate.py  governance_gates.py  quality_gate.sh  quick_bootstrap.py  run_mutation_tests.sh  sync_sample_fixtures.py
templates/: detection_analyzer.py  external_tool_analyzer.py  generate_analyzer.py  security_analyzer.py  simple_format_analyzer.py  string_based_analyzer.py  validate_analyzer.py
tests/: README.md  __init__.py  conftest.py
(+1343 files in other folders)
