[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2inspect"
version = "2.0.0"
description = "Advanced malware analysis tool using radare2 and r2pipe"
readme = "README.md"
authors = [
    {name = "Marc Rivero", email = "mriverolopez@gmail.com"}
]
maintainers = [
    {name = "Marc Rivero", email = "mriverolopez@gmail.com"}
]
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["malware", "analysis", "radare2", "r2pipe", "reverse-engineering", "security", "forensics"]
dependencies = [
    "r2pipe>=1.8.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "colorlog>=6.8.0",
    "pefile>=2023.2.7",
    "yara-python>=4.5.0",
    "python-magic>=0.4.27",
    "pycryptodome>=3.19.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.5.0",
    "pybloom-live>=4.0.0",
    "simhash>=2.1.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pyfiglet>=0.8.post1",
    "pandas>=1.3.0; python_version < '3.9'",
    "pandas>=1.5.0; python_version >= '3.9' and python_version < '3.11'",
    "pandas>=2.0.0; python_version >= '3.11'",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "mutmut>=2.4.0",
]
docker = [
    "pycparser>=2.21",
    "pyimpfuzzy>=0.1.1",
    "python-tlsh>=4.5.0",
    "ssdeep>=3.4",
]

[project.urls]
Homepage = "https://github.com/seifreed/r2inspect"
Documentation = "https://github.com/seifreed/r2inspect/blob/main/README.md"
Repository = "https://github.com/seifreed/r2inspect"
Issues = "https://github.com/seifreed/r2inspect/issues"
Changelog = "https://github.com/seifreed/r2inspect/releases"

[project.scripts]
r2inspect = "r2inspect.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["r2inspect*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"r2inspect" = [
    "rules/yara/*.yar",
    "rules/yara/*.yara",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | env
  | build
  | dist
  | \.qlty
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "templates/**",
    "bench_samples/**",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "E722",  # do not use bare except
    "B904",  # raise from None
    "B007",  # unused loop variable
    "ARG001", # unused function argument
    "ARG003", # unused class method argument
    "SIM102", # use single if
    "SIM105", # use contextlib.suppress
    "SIM110", # use any()
    "SIM116", # use dict instead of if-elif
    "SIM401", # use dict.get
    "F401",  # unused imports in some __init__ files
    "UP047", # avoid PEP 695 type parameter enforcement (py3.8 support)
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
    ".qlty",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["ARG", "S101"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
force_single_line = false
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
exclude = [
    "venv",
    "env",
    ".venv",
    "build",
    "dist",
    ".qlty",
    "bench_samples",
    "benchmarks",
    "samples",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0511",  # fixme
    "C0103",  # invalid-name
    "R0801",  # duplicate-code
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "r2", "e", "f"]

[tool.bandit]
exclude_dirs = ["tests", "venv", "env", ".venv", ".qlty"]
skips = [
    "B101",  # assert_used - needed for tests
    "B601",  # paramiko_calls - false positives
    "B602",  # subprocess_popen_with_shell_equals_true - needed for some operations
]
severity = "medium"

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line
]

[tool.coverage.run]
source = ["r2inspect"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\(Protocol\\):",
    "@abstractmethod",
]
