[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2inspect"
version = "2.1.0"
description = "Advanced malware analysis tool using radare2 and r2pipe"
readme = "README.md"
authors = [
    {name = "Marc Rivero", email = "mriverolopez@gmail.com"}
]
maintainers = [
    {name = "Marc Rivero", email = "mriverolopez@gmail.com"}
]
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["malware", "analysis", "radare2", "r2pipe", "reverse-engineering", "security", "forensics"]
dependencies = [
    "r2pipe>=1.8.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "colorlog>=6.8.0",
    "pefile>=2023.2.7",
    "yara-python>=4.5.0",
    "python-magic>=0.4.27",
    "pycryptodome>=3.19.0",
    "cryptography>=48.0.1",
    "psutil>=5.9.0",
    "pydantic>=2.5.0",
    "pybloom-live>=4.0.0",
    "simhash>=2.1.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pyfiglet>=0.8.post1",
    "pandas>=2.0.0",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "ruff>=0.1.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "mutmut>=2.4.0",
    # Transitive via pip-audit -> CacheControl; pin past GHSA-6v7p-g79w-8964.
    "msgpack>=1.2.1",
    # Native hash libraries the analyzers (and their tests) exercise. They were
    # only in the optional "docker" group, so the documented `.[dev]` test
    # install lacked them and the impfuzzy/telfhash tests failed. pyimpfuzzy
    # builds the impfuzzyutil C extension against libfuzzy, which is unavailable
    # on the Windows runner, so exclude it there.
    "pyimpfuzzy>=0.1.1; sys_platform != 'win32'",
    "telfhash>=0.9.8; sys_platform != 'win32'",
    "python-tlsh>=4.5.0",
]
docker = [
    "pycparser>=2.21",
    "pyimpfuzzy>=0.1.1",
    "python-tlsh>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/seifreed/r2inspect"
Documentation = "https://github.com/seifreed/r2inspect/blob/main/README.md"
Repository = "https://github.com/seifreed/r2inspect"
Issues = "https://github.com/seifreed/r2inspect/issues"
Changelog = "https://github.com/seifreed/r2inspect/releases"

[project.scripts]
r2inspect = "r2inspect.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["r2inspect*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"r2inspect" = [
    "rules/yara/*.yar",
    "rules/yara/*.yara",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | env
  | build
  | dist
  | \.qlty
  | templates
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "templates/**",
    "bench_samples/**",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults (idiomatic for click/typer/fastapi)
    "UP047", # PEP 695 type parameter syntax (project still supports py3.13 baseline)
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
    ".qlty",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["ARG", "S101", "E402", "UP038", "F811", "F403"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
force_single_line = false
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
exclude = "^(venv|env|\\.venv|build|dist|\\.qlty|bench_samples|benchmarks|samples|templates|tests)/"

[tool.pytest.ini_options]
# Wall-clock safety net: RLIMIT_CPU (see tests/conftest.py) only bounds CPU
# time, so a test blocked on a wedged r2 pipe / subprocess read burns zero CPU
# and would hang forever. pytest-timeout fails such a test (signal method
# interrupts the blocking syscall on the main thread) instead of leaving a
# zombie. 60s is far above any legitimate single test (the slowest real-r2
# tests are a few seconds).
# pytest-xdist is available for parallel runs (`pytest -n auto`, ~16x on this
# box) but is NOT enabled by default yet: the suite still has a few timing-
# and order-sensitive tests that flake under heavy concurrency, and the 100%
# coverage gate must stay deterministic. Once those are hardened, add
# `-n auto` here.
addopts = "--timeout=60"
markers = [
    "unit: fast unit-level coverage tests",
    "integration: broader workflow and integration coverage",
    "requires_r2: requires radare2/r2pipe runtime support",
    "slow: slower-running tests that may touch larger fixtures or subprocesses",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring (docstring policy handled by pydocstyle)
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0801",  # duplicate-code (false positives across analyzer modules)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "r2", "e", "f"]

[tool.bandit]
exclude_dirs = ["tests", "venv", "env", ".venv", ".qlty"]
severity = "low"
confidence = "low"

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line
]

[tool.coverage.run]
source = ["r2inspect"]
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]

[tool.coverage.report]
# Inline coverage suppressions (`# pragma: no cover`) are forbidden by project policy.
# Only structural exclusions for code that is not meant to execute are listed here.
exclude_lines = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\(Protocol\\):",
    "@abstractmethod",
]
